# toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Html/: camara.html
Python/: AutomaticSpeechRecognition.py  CompuEntropy.py  CreateTransformersSequenceModel.py  EmphasisFilter.py  FrameMatix.py  GetSound.py  IDSCAMERA_GUI.py  IDSCamera.py  LowPassFilter.py  MP4Converter.py  MatrixFactorization.py  MelSpectrogramToWaveform.py  MosaicAudio.py  MouseMover.py  MultiScaleMelSpectrogramLoss.py  MyBreastCancerDataset.py  P2P_chat_room.py  PSNR.py  PaddingResize.py  PalmprintPrincipalLinesExtraction.py  Pitch.py  PoseEstimator.py  RandomCutMix.py  RandomHorizontalFlipWaveform.py  RandomPermuteWord.py  RandomShuffleWaveform.py  RandomSynonymReplacement.py  RandomVerticalFlipWaveform.py  ResizePadding.py  SampleRateConvert.py  SimplifiedChineseAutomaticSpeechRecognition.py  SmallestUnivalueSegmentAssimilatingNucleus.py  Speed.py  Tempo.py  TimeStretch.py  TraditionalChineseAutomaticSpeechRecognition.py  TraditionalChineseHandwritingDataset.py  VideoDataset.py  VideoFeatureExtractor.py  VideoRotater.py  (+84 more)
automatic_speech_recognition/: README.md  main.py  pyproject.toml
automatic_speech_recognition/src/: __init__.py  constants.py
automatic_speech_recognition/tests/: test_model_factory.py  test_parakeet_asr_model.py  test_utils.py
resource/: taiwanese_name.txt
terminal_image_viewer/: requirements.txt  terminal_image_viewer.py
terminal_video_player/: requirements.txt  terminal_video_player.py
toolkit/: __init__.py
toolkit/file_downloader/: __init__.py  (+1 more)
(+45 files in other folders)
